--- a/mlops/unit_2_training/pipelines/sklearn_training/metadata.yaml
+++ b/mlops/unit_2_training/pipelines/sklearn_training/metadata.yaml
@@ -55,7 +55,7 @@ blocks:
   type: custom
   upstream_blocks: []
   uuid: load_models
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration:
     file_source:
@@ -75,7 +75,7 @@ blocks:
   - training_set
   - load_models
   uuid: hyperparameter_tuning/sklearn
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration:
     file_source:
