--- a/mlops/unit_3_observability/pipelines/predict/metadata.yaml
+++ b/mlops/unit_3_observability/pipelines/predict/metadata.yaml
@@ -3,26 +3,6 @@ blocks:
   color: null
   configuration:
     file_source:
-      path: unit_3_observability/global_data_products/model.py
-    global_data_product:
-      uuid: xgboost
-  downstream_blocks:
-  - inference
-  executor_config: null
-  executor_type: local_python
-  has_callback: false
-  language: python
-  name: model
-  retry_config: null
-  status: executed
-  timeout: null
-  type: global_data_product
-  upstream_blocks: []
-  uuid: model
-- all_upstream_blocks_executed: true
-  color: null
-  configuration:
-    file_source:
       path: unit_3_observability/markdowns/online_inference_guide.md
   downstream_blocks: []
   executor_config: null
@@ -51,8 +31,7 @@ blocks:
   status: executed
   timeout: null
   type: custom
-  upstream_blocks:
-  - model
+  upstream_blocks: []
   uuid: inference
 cache_block_output_in_memory: false
 callbacks: []
@@ -77,5 +56,5 @@ tags:
 - inference
 type: python
 uuid: predict
-variables_dir: /root/.mage_data/unit_3_observability
+variables_dir: /home/src/mage_data/unit_3_observability
 widgets: []
