--- a/mlops/unit_2_training/pipelines/sklearn_training/metadata.yaml
+++ b/mlops/unit_2_training/pipelines/sklearn_training/metadata.yaml
@@ -14,7 +14,7 @@ blocks:
   language: python
   name: Training_set
   retry_config: null
-  status: failed
+  status: executed
   timeout: null
   type: global_data_product
   upstream_blocks: []
@@ -55,7 +55,7 @@ blocks:
   type: custom
   upstream_blocks: []
   uuid: load_models
-- all_upstream_blocks_executed: false
+- all_upstream_blocks_executed: true
   color: null
   configuration:
     file_source:
@@ -68,7 +68,7 @@ blocks:
   language: python
   name: hyperparameter_tuning/sklearn
   retry_config: null
-  status: executed
+  status: updated
   timeout: null
   type: transformer
   upstream_blocks:
