--- a/mlops/unit_3_observability/pipelines/xgboost_training/metadata.yaml
+++ b/mlops/unit_3_observability/pipelines/xgboost_training/metadata.yaml
@@ -31,13 +31,13 @@ blocks:
   language: python
   name: Hyperparameter tuning/XGBoost
   retry_config: null
-  status: executed
+  status: failed
   timeout: null
   type: transformer
   upstream_blocks:
   - training_set
   uuid: hyperparameter_tuning/xgboost
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration:
     file_source:
@@ -57,7 +57,7 @@ blocks:
   - training_set
   - hyperparameter_tuning/xgboost
   uuid: xgboost
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: pink
   configuration:
     file_source:
